--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <title>About</title>
 </head>
 <body>
-    <h>About Page</h>
+    <h1>About Page</h1>
+    <h2>This is <strong>Awesome git</strong> Tutorial </h2>
     <ul>
         <li><a herf = "./about.html">about</a></li>
     </ul>
