--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <h2>This is <strong>Awesome git</strong> Tutorial </h2>
     <ul>
         <li><a herf = "./about.html">about</a></li>
+        <li><a herf = "./help.html">help</a></li>
     </ul>
     <p>we are learning git</p>
 </body>
