--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Learn git!</title>
 </head>
 <body>
-    <h1>Learning Git</h1>
+    <h1>LEARNIG GIT</h1>
     <p>We are learning git</p>
     <img src="./images/joshua.jpg" alt=" Joghua ">
 </body>
