add list readme

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a herf = "./about.html">about</a></li>
         <li><a herf = "./help.html">help</a></li>
+        <li><a herf = "./git.txt">README</a></li>
     </ul>
     <p>we are learning git</p>
 </body>
